use jdk 17 for workflows